--- a/source/package.json
+++ b/source/package.json
@@ -6,7 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@mui/styled-engine-sc": "^6.3.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -19,40 +24,45 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/ssr": "^0.1.0",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.7",
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-table": "^8.13.2",
     "autoprefixer": "10.4.17",
+    "byte-size": "^9.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "geist": "^1.2.1",
+    "geist": "^1.3.1",
     "input-otp": "^1.2.2",
     "lib-utils-ts": "^0.0.0-test",
     "lucide-react": "^0.354.0",
-    "next": "latest",
+    "next": "^15.1.4",
     "next-client-cookies": "^1.1.0",
-    "next-cloudinary": "^6.5.2",
+    "next-cloudinary": "^6.16.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
-    "react-day-picker": "^8.10.0",
+    "react-day-picker": "^9.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "sharp": "^0.33.3",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "utils": "^0.2.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "string-mask": "^0.3.0"
   },
   "devDependencies": {
+    "@types/byte-size": "^8.1.2",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "string-mask": "^0.3.0"
   },
   "name": "package",
   "description": "<a href=\"https://demo-nextjs-with-supabase.vercel.app/\">   <img alt=\"Next.js and Supabase Starter Kit - the fastest way to build apps with Next.js and Supabase\" src=\"https://demo-nextjs-with-supabase.vercel.app/opengraph-image.png\">   <h1 align=\"center\">Next.js and Supabase Starter Kit</h1> </a>",
